fix: updated portfolio page

--- a/index.html
+++ b/index.html
@@ -41,23 +41,22 @@
                 <h2>Skills</h2>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
-                    <span class="ratings">3 stars</span>
+                    <img src="./images/ratings-dot.png" alt="ratings">
                     <p>HTML</p>
                 </div>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
-                    <span class="ratings">3 stars</span>
+                    <img src="./images/ratings-dot.png" alt="ratings">
                     <p>CSS</p>
                 </div>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
-                    <span class="ratings">3 stars</span>
+                    <img src="./images/ratings-dot.png" alt="ratings">
                     <p>BootStrap</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-item">Content Management
-                        System</h3>
-                    <span class="ratings">3 stars</span>
+                    <h3 class="skills-item">Content Management Sys</h3>
+                    <img src="./images/ratings-dot.png" alt="ratings">
                     <p>WordPress</p>
                 </div>
             </article>
@@ -84,22 +83,6 @@
             </article>
         </div>
     </main>
-
-    <footer>
-        <nav class="footer-nav">
-            <ul class="nav-links country"><li><a href="#">Nigeria</a></li></ul>
-            <ul class="nav-links">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Advertising</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href="#">How Search Works</a></li>
-                <li><a href="#">Carbon neutral since 2007</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Settings</a></li>                
-            </ul>
-        </nav>
-    </footer>
     
 </body>
 </html>
