fix: updated portfolio page

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="header-box1">
             <h1>'Wumi Ola</h1>
             <ul class="social-links">
-                <li><a href="#"><i class="fa fa-envelope-o"></i>wumi2021@gmail.com</a></li>
+                <li><a href="mailto:wumi2021@gmail.com"><i class="fa fa-envelope-o"></i>wumi2021@gmail.com</a></li>
                 <li><a href="#"><i class="fa fa-phone"></i>+234 902 2636 321</a></li>
                 <li><a href="#"><i class="fa fa-map-marker"></i>Kaduna, Nigeria</a></li>
             </ul>
         </div>
         <div class="header-box2">
             <ul class="social-links">
-                <li><a href="#"><i class="fa fa-github"></i>github.com/WumiDev</a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i>linkedin.com/in/WumiDev</a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i>@WumiDev</a></li>
+                <li><a href="https://github.com/WumiDev"><i class="fa fa-github"></i>github.com/WumiDev</a></li>
+                <li><a href="https://linkedin.com/in/WumiDev"><i class="fa fa-linkedin"></i>linkedin.com/in/WumiDev</a></li>
+                <li><a href="https://twitter.com/WumiDev"><i class="fa fa-twitter"></i>@WumiDev</a></li>
             </ul>
         </div>
         <div class="header-box3">
@@ -79,7 +79,12 @@
             </article>
             <article class="languages">
                 <h2>Languages</h2><br>
-                <p><span class="language-item"> English </span><span class="language-item"> Yoruba </span><span class="language-item"> Hausa </span></p>                
+                <ul>
+                    <li class="language-item">English</li>
+                    <li class="language-item">Yoruba</li>
+                    <li class="language-item">Hausa</li>
+                </ul>
+                <!-- <p><span class="language-item"> English </span><span class="language-item"> Yoruba </span><span class="language-item"> Hausa </span></p>                 -->
             </article>
         </div>
     </main>
