--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>'Wumi Ola</h1>
             <ul class="social-links">
                 <li><a href="mailto:wumi2021@gmail.com"><i class="fa fa-envelope-o"></i>wumi2021@gmail.com</a></li>
-                <li><a href="#"><i class="fa fa-phone"></i>+234 902 2636 321</a></li>
+                <li><a href="#"><i class="fa fa-phone"></i>+234 818 3607 799</a></li>
                 <li><a href="#"><i class="fa fa-map-marker"></i>Kaduna, Nigeria</a></li>
             </ul>
         </div>
@@ -48,6 +48,11 @@
                     <h3 class="skills-item">Frontend Web Development</h3>
                     <img src="./images/ratings-dot.png" alt="ratings">
                     <p>CSS</p>
+                </div>
+                <div class="skills-item">
+                    <h3 class="skills-item">Frontend Web Development</h3>
+                    <img src="./images/ratings-dot.png" alt="ratings">
+                    <p>JavaScript</p>
                 </div>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
