--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <article class="profile">
                 <h2>Profile</h2>
                 <p>I am a Web Development enthusiast with a keen
-                    interest in Frontend Web Development. I am opened to remote job opportunity as a Junior Developer.</p>
+                    interest in Frontend Web Development, Blockchain & Decentralized App (dApp). I am opened to remote job opportunity as an Intern or a Junior Developer.</p>
             </article>
             <article class="skills">
                 <h2>Skills</h2>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
-                    <img src="./images/ratings-dot.png" alt="ratings">
-                    <p>HTML</p>
+<!--                     <img src="./images/ratings-dot.png" alt="ratings"> -->
+                    <p>HTML | CSS | JavaScript | React</p>
                 </div>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
@@ -75,7 +75,11 @@
             <article class="courses">
                 <h2>Courses</h2>
                 <h3 class="skills-item">Frontend Web Development,<br>Zuri X I4G Training</h3>
-                <p>03/2021 – 07/2021</p>                 
+                <p>03/2021 – 07/2021</p> 
+                
+                <h2>Courses</h2>
+                <h3 class="skills-item">Learn to Solve Problems Using Blockchain Technology,<br>Zuri X Nestcoin Blockgames Training</h3>
+                <p>02/2022 – 05/2022</p> 
             </article>
             <article class="education">
                 <h2>Education</h2>
