--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!--                     <img src="./images/ratings-dot.png" alt="ratings"> -->
                     <p>HTML | CSS | JavaScript | React</p>
                 </div>
-                <div class="skills-item">
+<!--                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
                     <img src="./images/ratings-dot.png" alt="ratings">
                     <p>CSS</p>
@@ -63,7 +63,7 @@
                     <h3 class="skills-item">Content Management Sys</h3>
                     <img src="./images/ratings-dot.png" alt="ratings">
                     <p>WordPress</p>
-                </div>
+                </div> -->
             </article>
         </div>
         <div class="right-box">
