--- a/index.html
+++ b/index.html
@@ -41,9 +41,21 @@
                 <h2>Skills</h2>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
-<!--                     <img src="./images/ratings-dot.png" alt="ratings"> -->
+                    <img src="./images/ratings-dot.png" alt="ratings">
                     <p>HTML | CSS | JavaScript | React</p>
+                    
+                <h2>Skills</h2>
+                <div class="skills-item">
+                    <h3 class="skills-item">Blockchain Development</h3>
+                    <img src="./images/ratings-dot.png" alt="ratings">
+                    <p>Solidity | Remix | Scaffold Eth | Hardhat</p>
                 </div>
+                
+            <article class="experience">
+                <h2>Professional Experience</h2>
+                <h3 class="skills-item">Freelancer, Self-employed</h3>
+                <p>03/2021 – Present</p>                
+            </article>
 <!--                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
                     <img src="./images/ratings-dot.png" alt="ratings">
