--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <h2>Skills</h2>
                 <div class="skills-item">
                     <h3 class="skills-item">Frontend Web Development</h3>
-                    <img src="./images/ratings-dot.png" alt="ratings">
+<!--                     <img src="./images/ratings-dot.png" alt="ratings"> -->
                     <p>HTML | CSS | JavaScript | React</p>
-                    
-                <h2>Skills</h2>
+                  </div> 
+<!--                 <h2>Skills</h2> -->
                 <div class="skills-item">
                     <h3 class="skills-item">Blockchain Development</h3>
-                    <img src="./images/ratings-dot.png" alt="ratings">
+<!--                     <img src="./images/ratings-dot.png" alt="ratings"> -->
                     <p>Solidity | Remix | Scaffold Eth | Hardhat</p>
                 </div>
                 
