--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h3 class="skills-item">Frontend Web Development,<br>Zuri X I4G Training</h3>
                 <p>03/2021 – 07/2021</p> 
                 
-                <h2>Courses</h2>
+<!--                 <h2>Courses</h2> -->
                 <h3 class="skills-item">Learn to Solve Problems Using Blockchain Technology,<br>Zuri X Nestcoin Blockgames Training</h3>
                 <p>02/2022 – 05/2022</p> 
             </article>
@@ -98,7 +98,7 @@
                 <h3 class="skills-item">B. Tech Elect & Elect Eng, LAUTECH</h3>
                 <p>2012 – 2017</p>                
             </article>
-            <article class="languages">
+<!--             <article class="languages">
                 <h2>Languages</h2><br>
                 <ul>
                     <li class="language-item">English</li>
@@ -106,7 +106,7 @@
                     <li class="language-item">Hausa</li>
                 </ul>
                 <!-- <p><span class="language-item"> English </span><span class="language-item"> Yoruba </span><span class="language-item"> Hausa </span></p>                 -->
-            </article>
+            </article> -->
         </div>
     </main>
     
