--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                 <h3 class="skills-item">B. Tech Elect & Elect Eng, LAUTECH</h3>
                 <p>2012 – 2017</p>                
             </article>
-<!--             <article class="languages">
+<!--            <article class="languages">
                 <h2>Languages</h2><br>
                 <ul>
                     <li class="language-item">English</li>
                     <li class="language-item">Yoruba</li>
                     <li class="language-item">Hausa</li>
                 </ul>
-                <!-- <p><span class="language-item"> English </span><span class="language-item"> Yoruba </span><span class="language-item"> Hausa </span></p>                 -->
+                <p><span class="language-item"> English </span><span class="language-item"> Yoruba </span><span class="language-item"> Hausa </span></p>                
             </article> -->
         </div>
     </main>
