--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>03/2021 – 07/2021</p> 
                 <br>
 <!--                 <h2>Courses</h2> -->
-                <h3 class="skills-item">Learn to Solve Problems Using Blockchain Technology,<br>Zuri X Nestcoin Blockgames Training</h3>
+                <h3 class="skills-item">Learn to Solve Problems Using Blockchain Technology,<br>Zuri X Nestcoin Blockgames</h3>
                 <p>02/2022 – 05/2022</p> 
             </article>
             <article class="education">
