--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <article class="profile">
                 <h2>Profile</h2>
                 <p>I am a Web Development enthusiast with a keen
-                    interest in Frontend Web Development, Blockchain & Decentralized App (dApp). I am opened to remote job opportunity as an Intern or a Junior Developer.</p>
+                    interest in Frontend Web Development, Blockchain & dApp. I am opened to remote job opportunity as an Intern or a Junior Developer.</p>
             </article>
             <article class="skills">
                 <h2>Skills</h2>
