--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             </article>
         </div>
         <div class="right-box">
-            <article class="experience">
+<!--             <article class="experience">
                 <h2>Professional Experience</h2>
                 <h3 class="skills-item">Freelancer, Self-employed</h3>
                 <p>03/2021 – Present</p>                
-            </article>
+            </article> -->
             <article class="courses">
                 <h2>Courses</h2>
                 <h3 class="skills-item">Frontend Web Development,<br>Zuri X I4G Training</h3>
